--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -7,6 +7,7 @@
  *    Header
  *    Section
  *    Timeline
+ *    Footer
  */
 
 /*---------------------------------- Global ----------------------------------*/
@@ -365,6 +366,7 @@ section h3.section-subheading {
   padding-right: 100px;
 }
 
+
 /*-------------------------------- Timeline ---------------------------------*/
 
 .timeline {
@@ -533,4 +535,13 @@ section h3.section-subheading {
   .timeline > li.timeline-inverted > .timeline-panel {
     padding: 0 100px 20px 20px;
   }
+}
+
+
+/*--------------------------------- Footer ---------------------------------*/
+
+footer {
+  padding: 25px 0;
+  text-align: center;
+  background-color: #222222;
 }
