--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -7,6 +7,7 @@
  *    Header
  *    Section
  *    Timeline
+ *    Contact
  *    Footer
  *    Modals
  *    Selection
@@ -552,12 +553,81 @@ section h3.section-subheading {
 }
 
 
+/*--------------------------------- Contact ----------------------------------*/
+
+section#contact {
+  background-color: #222222;
+  // background-image: url('../img/map-image.png');
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+section#contact .section-heading {
+  color: white;
+}
+
+section#contact .form-group {
+  margin-bottom: 25px;
+}
+
+section#contact .form-group input,
+section#contact .form-group textarea {
+  padding: 20px;
+}
+
+section#contact .form-group input.form-control {
+  height: auto;
+}
+
+section#contact .form-group textarea.form-control {
+  height: 236px;
+}
+
+section#contact .form-control:focus {
+  border-color: #fed136;
+  box-shadow: none;
+}
+
+section#contact ::-webkit-input-placeholder {
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #eeeeee;
+}
+
+section#contact :-moz-placeholder {
+  /* Firefox 18- */
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #eeeeee;
+}
+
+section#contact ::-moz-placeholder {
+  /* Firefox 19+ */
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #eeeeee;
+}
+
+section#contact :-ms-input-placeholder {
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #eeeeee;
+}
+
+section#contact .text-danger {
+  color: #e74c3c;
+}
+
+
 /*---------------------------------- Footer ----------------------------------*/
 
 footer {
   padding: 25px 0;
   text-align: center;
-  background-color: #222222;
 }
 
 
